# django-http3-example

./: .env.example  .prospector.yaml  README.md  client.py  httpx_client.py  poetry.toml  pyproject.toml
api/: views.py
server/: middleware.py  settings.py  urls.py
