[tool.poetry]
name = "django-http3-example"
version = "0.1.0"
description = ""
authors = ["Dylan Stein <dylan@steins.studio>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"
hypercorn = {extras = ["h3"], version = "^0.14.3"}
uvloop = "^0.17.0"
httpx = "^0.23.3"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
ipdb = "^0.13.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
